# PathTracing

./: .gitignore  CMakeLists.txt  README.md  build.bat
resource/: PT_cosine_test.ppm
source/: CMakeLists.txt  main.cpp
source/accelerate/: bvh.hpp  scene_bvh.hpp
source/camera/: ray.hpp
source/material/: diffuse_material.hpp
source/renderer/: base_renderer.hpp
source/shape/: model.cpp  scene.hpp  shape.hpp
